--- a/klarity-backend/package.json
+++ b/klarity-backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.7",
+    "p-limit": "^7.1.1",
     "pg": "^8.16.3",
     "resend": "^6.1.2"
   }
